gitlab-ci: show diff when there are lint failures
Oftentimes, the lint failures are just simple whitespace issues.  Many
people submitting metadata do not really know much about the fdroid tools,
so they have to look up or ask what rewritemeta is.  This just shows a diff
after running rewritemeta so it should be clearer what the issue is.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,13 @@ before_script:
 
 lint:
   script:
-    - fdroid lint -f
+    - export EXITVALUE=0
+    - fdroid lint -f || {
+          export EXITVALUE=1;
+          printf "\nThese files have lint issues:\n";
+          fdroid rewritemeta -l;
+          printf "\nThese are the formatting issues:\n";
+          fdroid rewritemeta;
+          git --no-pager diff --color=always;
+      }
+    - exit $EXITVALUE
